<resources>
    <string name="app_name">Calculator</string>
    <string name="text1">0</string>
    <string name="text2">0</string>
    <string name="result">Result</string>
    <string name="add">Add</string>
    <string name="sub">Sub</string>
    <string name="mul">Mul</string>
    <string name="div">Div</string>
    <string name="mod">Mod</string>
    <string name="clr">Clr</string>
</resources>